# ai-code

./: .gitignore  main.py  pyproject.toml
src/: alpaca_env.py  data.py  dqn.py  env.py  fees.py  indicators.py  model_utils.py  portfolio_env.py  portfolio_train.py  train.py
tickerdata/: ABBV_av_1m.csv  ABNB_av_1m.csv  ABT_av_1m.csv  ACN_av_1m.csv  ADBE_av_1m.csv  AEE_av_1m.csv  AES_av_1m.csv  AFL_av_1m.csv  AKAM_av_1m.csv  ALB_av_1m.csv  ALGN_av_1m.csv  ALLE_av_1m.csv  ALL_av_1m.csv  AMCR_av_1m.csv  AMD_av_1m.csv  AMZN_av_1m.csv  AOS_av_1m.csv  APD_av_1m.csv  ARE_av_1m.csv  A_av_1m.csv  GOOGL_av_1m.csv  GOOG_av_1m.csv  LNT_av_1m.csv  MMM_av_1m.csv  MO_av_1m.csv
